# MGraph-AI__Service__GitHub__Digest

./: README.md  pyproject.toml  requirements-test.txt  run-locally.sh
.github/actions/aws__deploy__dev/: action.yml
.github/actions/aws__deploy__lambda/: action.yml
.github/actions/aws__deploy__main/: action.yml
.github/actions/aws__deploy__qa/: action.yml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml  ci-pipeline__prod.yml
docs/: index.md
docs/architecture/: github-digest-feature.md
docs/type_safe/: mgraph-service-type-safety-patterns.md
mgraph_ai_service_github_digest/: __init__.py  config.py
mgraph_ai_service_github_digest/fast_api/: Service__Fast_API.py  lambda_handler.py
mgraph_ai_service_github_digest/fast_api/routes/: Routes__GitHub__API.py  Routes__GitHub__Digest.py  Routes__GitHub__Stats.py  Routes__Info.py  Routes__Threat_Intelligence.py
mgraph_ai_service_github_digest/service/cache/: MGraph__Service__Cache.py  MGraph__Service__Requests.py
mgraph_ai_service_github_digest/service/github/: GitHub__API.py  GitHub__Digest.py  GitHub__Stats.py  GitHub__Stats__Table.py  GitHub__Stats__Tree.py
mgraph_ai_service_github_digest/utils/: Version.py
tests/deploy_aws/: test_Deploy__Service__GitHub__DIgest__to__dev.py  test_Deploy__Service__GitHub__DIgest__to__dev__qa__prod.py  test_Deploy__Service__to__dev.py  test_Deploy__Service__to__dev__qa__prod.py  test_Deploy__Service__to__main.py  test_Deploy__Service__to__prod.py  test_Deploy__Service__to__qa.py
tests/unit/: Service__Fast_API__Test_Objs.py  test_config.py
(+75 files in other folders)
