[tool.poetry]
name        = "mgraph_ai_service_github_digest"
version     = "v1.6.4"
description = "MGraph-AI__Service__GitHub__Digest"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__GitHub__Digest"
repository  = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__GitHub__Digest"

[tool.poetry.dependencies]
python                     = "^3.12"
osbot-fast-api-serverless  = "*"
memory-fs                  = "*"
mgraph-db                  = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"